# Tracker

./: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
scripts/: seed-demo-db.mjs
src/: App.css  App.tsx  api.ts  attachments.tsx  index.css  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/lists/: categories.txt  departments.txt  owners.txt  projects.txt
src-tauri/src/: attachments.rs  main.rs
src/__tests__/: attachments.test.ts  utils.formatting.test.ts  utils.records.test.ts  utils.strings.test.ts
