[package]
name = "tracker"
version = "0.1.4"
description = "Shared JSON activity tracker"
authors = ["salvolm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["serde", "v4"] }
